# MPL

./: .editorconfig  .pre-commit-config.yaml  72_solomon_sigil_shapes.json  CITATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GRAMMAR.md  MAGI.md  MANIFESTO.md  MRE_ARCHITECTURE.md  ONTOLOGY.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  STYLEGUIDE.md  mpl_shell.py  pitch_deck.md  pyproject.toml  setup.py  solomon_sigil_shapes.json  stdlib_overview.md
.idx/: dev.nix
data/: 72_solomon_sigil_shapes.json  MAGI_225.json  abramelin_db.json
docs/: GRIMOIRE.md  index.html  sigil.html
examples/: enochian_watchtower.ms  enochian_watchtower.pine  hybrid_oracle.ms  oracle_gen.ms  prophetic_oracle.ms  summon_daemon.ms
research/: FRATERNITY.md
src/: interpreter.py  lexer.py  main.py  parser.py  resolver.py  stdlib.py  transmute_watchtower.py
src/modules/: gematria_engine.py  occultator.py
tests/: test_interpreter.py
