[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magickscript"
version = "0.1.0"
description = "An interpreted, domain-specific language (DSL) that structures esoteric intent into executable logic."
readme = "README.md"
authors = [
  { name = "Hakanovski", email = "your_email@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Religion",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Artistic Software",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["esolang", "magic", "occult", "hermetic", "dsl", "technomancy", "interpreter"]
requires-python = ">=3.8"
dependencies = [
    # List your project dependencies here. 
    # For a language parser, you might eventually need 'lark' or 'ply'.
    # "lark>=1.1.5", 
    "click>=8.0",  # For the Command Line Interface (CLI)
]

[project.urls]
"Homepage" = "https://github.com/hakanovski/MPL"
"Bug Tracker" = "https://github.com/hakanovski/MPL/issues"
"Documentation" = "https://github.com/hakanovski/MPL/tree/main/docs"

[project.scripts]
# This allows users to type 'mpl' in their terminal to run the interpreter
# Example usage: mpl run ritual.ms
mpl = "mpl.cli:main" 

[tool.setuptools.packages.find]
where = ["src"]  # Assumes your source code is in a 'src' folder (Best Practice)

# --- Tool Configurations (Code Style) ---

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
